worked up some bugs with js and improved loading times

--- a/core/static/css/calcGrid.css
+++ b/core/static/css/calcGrid.css
@@ -1,28 +1,1 @@
-.grid-container-calc {
-    display: grid;
-    grid-template-columns: 0.5fr 1fr 1fr 0.5fr;
-    grid-template-rows: 0.5fr 1fr 1fr 0.6fr;
-    gap: 0px 0px;
-    grid-template-areas:
-      ". titleCalc titleCalc ."
-      ". calcOption calcOption ."
-      ". calcOption calcOption ."
-      ". calcAddedCol calcAddedCol .";
-  }
-  .titleCalc { grid-area: titleCalc; }
-  .calcOption { grid-area: calcOption; }
-  .calcAddedCol { grid-area: calcAddedCol; }
-
-  @media (max-width: 500px) {
-    .grid-container-calc {
-      display: grid;
-      grid-template-columns: 0.1fr 1fr 1fr 0.1fr;
-      grid-template-rows: 0.5fr 1fr 1fr 0.2fr;
-      gap: 0px 0px;
-      grid-template-areas:
-        ". titleCalc titleCalc ."
-        ". calcOption calcOption ."
-        ". calcOption calcOption ."
-        ". calcAddedCol calcAddedCol .";
-    }
-  }
+.grid-container-calc{display:grid;grid-template-columns:0.5fr 1fr 1fr 0.5fr;grid-template-rows:0.5fr 1fr 1fr 0.6fr;gap:0 0;grid-template-areas:". titleCalc titleCalc ." ". calcOption calcOption ." ". calcOption calcOption ." ". calcAddedCol calcAddedCol ."}.titleCalc{grid-area:titleCalc}.calcOption{grid-area:calcOption}.calcAddedCol{grid-area:calcAddedCol}@media (max-width:500px){.grid-container-calc{display:grid;grid-template-columns:0.1fr 1fr 1fr 0.1fr;grid-template-rows:0.5fr 1fr 1fr 0.2fr;gap:0 0;grid-template-areas:". titleCalc titleCalc ." ". calcOption calcOption ." ". calcOption calcOption ." ". calcAddedCol calcAddedCol ."}}
