--- a/core/static/css/gallery.css
+++ b/core/static/css/gallery.css
@@ -1,53 +1,1 @@
-.titleGalleryWrapper{
-
-    margin-top: 5%;
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-size: 55px;
-    text-align: center;
-    margin-bottom: 3%;
-}
-.galleryPos{
-    margin-bottom: 5%;
-}
-.colorGallerytitle{
-    color: #1fa4aa;
-}
-.tileGallery{
-    width: 100%;
-    height: 35vh;
-    filter: grayscale(30%);
-    position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-.boxWhere{
-    width: 75%;
-    height: 8vh;
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-}
-.titleWhere{
-
-    width: 90%;
-    margin-left: 5%;
-    margin-top: 7%;
-    font-family: "Montserrat";
-    font-size: 17px;
-    font-weight: 700;
-    color: #55447a;
-    word-wrap: break-word;
-}
-.tileGallery:hover > .boxWhere{
-    background-color: #3a2b5a;
-    -webkit-transition: background-color 140ms linear;
-    -ms-transition: background-color 140ms linear;
-    transition: background-color 140ms linear;
-}
-.tileGallery:hover > .boxWhere > .titleWhere{
-    color: white;
-}
+.titleGalleryWrapper{margin-top:5%;font-family:"Montserrat";font-weight:700;font-size:55px;text-align:center;margin-bottom:3%}.galleryPos{margin-bottom:5%}.colorGallerytitle{color:#1fa4aa}.tileGallery{width:100%;height:35vh;filter:grayscale(30%);position:relative;background-size:cover;background-repeat:no-repeat;background-position:center center}.boxWhere{width:75%;height:8vh;background-color:#fff;position:absolute;bottom:0;right:0}.titleWhere{width:90%;margin-left:5%;margin-top:7%;font-family:"Montserrat";font-size:17px;font-weight:700;color:#55447a;word-wrap:break-word}.tileGallery:hover>.boxWhere{background-color:#3a2b5a;-webkit-transition:background-color 140ms linear;-ms-transition:background-color 140ms linear;transition:background-color 140ms linear}.tileGallery:hover>.boxWhere>.titleWhere{color:#fff}
