--- a/core/static/css/indexGrid.css
+++ b/core/static/css/indexGrid.css
@@ -1,73 +1,1 @@
-.grid-container-picture {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 1px 1px;
-    grid-template-areas:
-      "textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex"
-      "textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex"
-      "textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex";
-  }
-  
-  .backgroundImgIndex { grid-area: backgroundImgIndex; }
-  
-  .textIndex { grid-area: textIndex; }
-
-
-
-  @media (max-width: 800px) {
-    .grid-container-picture {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-      gap: 1px 1px;
-      grid-template-areas:
-        "textIndex"
-        "textIndex"
-        "backgroundImgIndex"
-        "backgroundImgIndex";
-    }
-    
-    .textIndex { grid-area: textIndex; }
-    
-    .backgroundImgIndex { grid-area: backgroundImgIndex; }
-  }
-  
-  
-  @media (max-width: 380px) {
-    .grid-container-picture {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr 1fr 0.5fr;
-      gap: 1px 1px;
-      grid-template-areas:
-        "textIndex"
-        "textIndex"
-        "backgroundImgIndex"
-        "backgroundImgIndex";
-    }
-    
-    .textIndex { grid-area: textIndex; }
-    
-    .backgroundImgIndex { grid-area: backgroundImgIndex; }
-  }
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    background-color: rgba(0, 0, 0, 0);
-    -webkit-border-radius: 100px
-}
-
-::-webkit-scrollbar:hover {
-    background-color: rgba(0, 0, 0, .09)
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, .5);
-    -webkit-border-radius: 100px
-}
-
-::-webkit-scrollbar-thumb:active {
-    background: rgba(0, 0, 0, .61);
-    -webkit-border-radius: 100px
-}
+.grid-container-picture{display:grid;grid-template-columns:1fr 1fr 1fr 1fr 1fr 1fr;grid-template-rows:1fr 1fr 1fr;gap:1px 1px;grid-template-areas:"textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex" "textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex" "textIndex textIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex backgroundImgIndex"}.backgroundImgIndex{grid-area:backgroundImgIndex}.textIndex{grid-area:textIndex}@media (max-width:800px){.grid-container-picture{display:grid;grid-template-columns:1fr;grid-template-rows:1fr 1fr 1fr 1fr;gap:1px 1px;grid-template-areas:"textIndex" "textIndex" "backgroundImgIndex" "backgroundImgIndex"}.textIndex{grid-area:textIndex}.backgroundImgIndex{grid-area:backgroundImgIndex}}@media (max-width:380px){.grid-container-picture{display:grid;grid-template-columns:1fr;grid-template-rows:1fr 1fr 1fr 0.5fr;gap:1px 1px;grid-template-areas:"textIndex" "textIndex" "backgroundImgIndex" "backgroundImgIndex"}.textIndex{grid-area:textIndex}.backgroundImgIndex{grid-area:backgroundImgIndex}}
