--- a/core/static/css/nav.css
+++ b/core/static/css/nav.css
@@ -1,187 +1,1 @@
-button {
-    background: none;
-    border: 0;
-    box-sizing: border-box;
-    margin: 1em;
-    padding: 1.5vh 3vh;
-    box-shadow: inset 0 0 0 2px #1fa4aa ;
-    color: #1fa4aa;
-    font-size: inherit;
-    font-weight: 700;
-    position: relative;
-    vertical-align: middle;
-    font-size: 20px;
-    border-radius: 25px;
-  }
-  button::before, button::after {
-    outline: none;
-    border: none;
-  }
-  button:active {
-    outline: none;
-    border: none;
-    }
-    
-  button:focus {
-    outline: none;
-    border: none;
-  }
- 
-
-  @media (max-width: 762px) {
-    button {
-       
-        font-size: 16px;
-      }
-  }
-
-
-
-
-
-
-
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 12%;
-    background-color: white;
-  }
-  
-  nav{
-
-  }
-  
-  .logo {
-    cursor: pointer;
-    max-width: 20%;
-  }
-  .logoImg{
-    max-width: 45%;
-}
-  
-  .nav__links a,
-  .cta,
-  .overlay__content a {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    color:#9e8cc3 ;
-    font-size: 20px;
-    text-decoration: none;
-  }
-  
-  .nav__links {
-    list-style: none;
-    display: flex;  
-  }
-  
-  .nav__links li {
-    padding: 0px 20px;
-  }
-  
-  .nav__links li a {
-    transition: color 0.3s ease 0s;
-  }
-  
-  .nav__links li a:hover {
-    color:#5b4291 ;
-  }
-  
-  .cta {
-    padding: 9px 25px;
-    background-color:#17898e;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: background-color 0.3s ease 0s;
-    color: white;
-  }
-  
-  .cta:hover {
-    background-color: #19686b;
-    color: white;
-    text-decoration: none;
-  }
-  
-  /* Mobile Nav */
-  
-  .menu {
-    display: none;
-  }
-  
-  .overlay {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    background-color: #24252a;
-    overflow-x: hidden;
-    transition: width 0.5s ease 0s;
-  }
-  
-  .overlay--active {
-    width: 100%;
-  }
-  
-  .overlay__content {
-    display: flex;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .overlay a {
-    padding: 15px;
-    font-size: 36px;
-    display: block;
-    transition: color 0.3s ease 0s;
-  }
-  
-  .overlay a:hover,
-  .overlay a:focus {
-    color: #0088a9;
-  }
-  .overlay .close {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-    color: #edf0f1;
-  }
-  
-  @media (max-height: 450px) {
-    .overlay a {
-      font-size: 20px;
-    }
-    .overlay .close {
-      font-size: 40px;
-      top: 15px;
-      right: 35px;
-    }
-    .logoImg{
-      max-width: 155%;
-  }
-   
-  }
-  
-  @media  (max-width: 800px) {
-    .nav__links,
-    .cta {
-      display: none;
-    }
-    .menu {
-        display: initial;
-        padding: 5px 16px;
-        background-color:#17898e;
-        font-size: 18px;
-    }
-    .logoImg {
-      max-width: 155%;
-    }
-  }
-  
+button{background:none;border:0;box-sizing:border-box;margin:1em;padding:1.5vh 3vh;box-shadow:inset 0 0 0 2px #1fa4aa;color:#1fa4aa;font-size:inherit;font-weight:700;position:relative;vertical-align:middle;font-size:20px;border-radius:25px}button::before,button::after{outline:none;border:none}button:active{outline:none;border:none}button:focus{outline:none;border:none}@media (max-width:762px){button{font-size:16px}}header{display:flex;justify-content:space-between;align-items:center;padding:30px 12%;background-color:#fff}.logo{cursor:pointer;max-width:20%}.logoImg{max-width:45%}.nav__links a,.cta,.overlay__content a{font-family:"Montserrat",sans-serif;font-weight:500;color:#9e8cc3;font-size:20px;text-decoration:none}.nav__links{list-style:none;display:flex}.nav__links li{padding:0 20px}.nav__links li a{transition:color 0.3s ease 0s}.nav__links li a:hover{color:#5b4291}.cta{padding:9px 25px;background-color:#17898e;border:none;border-radius:50px;cursor:pointer;transition:background-color 0.3s ease 0s;color:#fff}.cta:hover{background-color:#19686b;color:#fff;text-decoration:none}.menu{display:none}.overlay{height:100%;width:0;position:fixed;z-index:1;left:0;top:0;background-color:#24252a;overflow-x:hidden;transition:width 0.5s ease 0s}.overlay--active{width:100%}.overlay__content{display:flex;height:100%;flex-direction:column;align-items:center;justify-content:center}.overlay a{padding:15px;font-size:36px;display:block;transition:color 0.3s ease 0s}.overlay a:hover,.overlay a:focus{color:#0088a9}.overlay .close{position:absolute;top:20px;right:45px;font-size:60px;color:#edf0f1}@media (max-height:450px){.overlay a{font-size:20px}.overlay .close{font-size:40px;top:15px;right:35px}.logoImg{max-width:155%}}@media (max-width:800px){.nav__links,.cta{display:none}.menu{display:initial;padding:5px 16px;background-color:#17898e;font-size:18px}.logoImg{max-width:155%}}
