--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="backgroundImgIndex">
         <div class="mainPictureIndex">
-            <img class="responsiveImgIndex" src="{% static 'images/backgroundImg.png'  %}">
+            <img class="responsiveImgIndex" src="{% static 'images/backgroundImg.png'  %}" alt="background picture">
         </div>
     </div>
 </div>
