--- a/core/templates/nav.html
+++ b/core/templates/nav.html
@@ -14,8 +14,8 @@
 <div class="overlay">
     <a class="close">&times;</a>
     <div class="overlay__content">
-        <a href="#aboutUs">O nas</a>
-        <a href="#gallery">Realizacje</a>
-        <a href="#calc">Kalkulator</a>
+        <a class="linkNavMobile" href="#aboutUs">O nas</a>
+        <a class="linkNavMobile" href="#gallery">Realizacje</a>
+        <a class="linkNavMobile" href="#calc">Kalkulator</a>
     </div>
 </div>
