--- a/core/static/css/index.css
+++ b/core/static/css/index.css
@@ -1,109 +1,1 @@
-html {
-    scroll-behavior: smooth;
-  }
-.responsiveImgIndex{
-    max-width: 80%;
-    margin-left: 10%;
-}
-.textIndexContent{
-    font-family: "Montserrat";
-    font-weight: 700;
-    font-size: 64px;
-    width: 100%;
-    margin-left: 35%;
-    margin-top: 11%;
-    color:#9e8cc3 ;
-    z-index: 1000;
-}
-.textIndexContentColor{
-    color:#3a2b5a ;
-}
-.textIndexDot{
-    color:#9e8cc3 ;
-    margin-left: 0.3vw;
-}
-.textAboutIndex{
-    font-family: "Montserrat";
-    text-align: left;
-    font-size: 21px;
-    width: 90%;
-    font-weight: 500;
-    margin-left: 35%;
-    margin-top: 5%;
-    color:black ;
-    z-index: 1000;
-}
-.buttonIndex{
-    margin-left: 33%; 
-}
-
-@media (max-width: 1600px) {
-    .textIndexContent{
-        font-size: 47px;
-    }
-}
-
-
-@media (max-width: 1430px) {
-
-    
-}
-@media (max-width: 1030px) {
-
-    .textIndexContent{
-        width: 110%;
-    }
-}
-@media (max-width: 800px) {
-    
-.responsiveImgIndex{
-    font-size: 28px;
-    margin-left: 5%;
-    width: 90%;
-}
-.textIndexContent{
-    font-size: 26px;
-    margin-left: 5%;
-    width: 90%;
-    margin-top: 0%;
-}
-.textIndexContentColor{
-    color:#3a2b5a ;
-}
-.textIndexDot{
-    color:#9e8cc3 ;
-    margin-left: 0.3vw;
-}
-.textAboutIndex{
-    font-size: 15px;
-    margin-left: 5%;
-    width: 90%;
-}
-.buttonIndex{
-    margin-left: 0%; 
-}
-  }
-
-
-
-
-::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-    background-color: rgba(0, 0, 0, 0);
-    -webkit-border-radius: 100px
-}
-
-::-webkit-scrollbar:hover {
-    background-color: rgba(0, 0, 0, .09)
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(0, 0, 0, .5);
-    -webkit-border-radius: 100px
-}
-
-::-webkit-scrollbar-thumb:active {
-    background: rgba(0, 0, 0, .61);
-    -webkit-border-radius: 100px
-}
+html{scroll-behavior:smooth}.responsiveImgIndex{max-width:80%;margin-left:10%}.textIndexContent{font-family:"Montserrat";font-weight:700;font-size:64px;width:100%;margin-left:35%;margin-top:11%;color:#9e8cc3;z-index:1000}.textIndexContentColor{color:#3a2b5a}.textIndexDot{color:#9e8cc3;margin-left:.3vw}.textAboutIndex{font-family:"Montserrat";text-align:left;font-size:21px;width:90%;font-weight:500;margin-left:35%;margin-top:5%;color:#000;z-index:1000}.buttonIndex{margin-left:33%}@media (max-width:1600px){.textIndexContent{font-size:47px}}@media (max-width:1030px){.textIndexContent{width:110%}}@media (max-width:800px){.responsiveImgIndex{font-size:28px;margin-left:5%;width:90%}.textIndexContent{font-size:26px;margin-left:5%;width:90%;margin-top:0%}.textIndexContentColor{color:#3a2b5a}.textIndexDot{color:#9e8cc3;margin-left:.3vw}.textAboutIndex{font-size:15px;margin-left:5%;width:90%}.buttonIndex{margin-left:0%}}::-webkit-scrollbar{width:8px;height:8px;background-color:rgba(0,0,0,0);border-radius:100px;-webkit-border-radius:100px}::-webkit-scrollbar:hover{background-color:rgba(0,0,0,.09)}::-webkit-scrollbar-thumb{background:rgba(0,0,0,.5);border-radius:100px;-webkit-border-radius:100px}::-webkit-scrollbar-thumb:active{background:rgba(0,0,0,.61);border-radius:100px;-webkit-border-radius:100px}
