--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,34 +1,29 @@
 {% load static  %}
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="utf-8">
   <title>WW Energia</title>
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/88703e40b7.js" crossorigin="anonymous"></script>
   <meta name="description" content="fotowoltaika ">
   <meta name="author" content="https://github.com/WinterOdin">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{% static '/css/indexGrid.css'  %}">
   <link rel="stylesheet" href="{% static '/css/index.css'  %}">
-  <link rel="stylesheet" href="{% static '/css/gridFooter.css'  %}">
-  <link rel="stylesheet" href="{% static '/css/footer.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/bootstrap.min.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/nav.css'  %}">
   <link rel="stylesheet" href="{% static '/css/gridWork.css'  %}">
   <link rel="stylesheet" href="{% static '/css/work.css'  %}">
-  <link rel="stylesheet" href="{% static '/css/nav.css'  %}">
-  <link rel="stylesheet" href="{% static '/css/test.css'  %}">
   <link rel="stylesheet" href="{% static '/css/calcGrid.css'  %}">
   <link rel="stylesheet" href="{% static '/css/calc.css'  %}">
   <link rel="stylesheet" href="{% static '/css/gallery.css'  %}">
   <link rel="stylesheet" href="{% static '/css/generated.css'  %}">
   <link rel="stylesheet" href="{% static '/css/generatedGrid.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/gridFooter.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/footer.css'  %}">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
-  
     {% block content  %}
 
 
@@ -38,6 +33,7 @@
   {% include 'footer.html'  %} 
     <script src="{% static '/js/jquery.min.js'  %}"></script>
     <script src="{% static '/js/main.js'  %}"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/88703e40b7.js" crossorigin="anonymous"></script>
+    <script src="{% static '/js/bootstrap.min.js'  %}" ></script>
 </body>
 </html>
