--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -48,10 +48,10 @@
           <div class="callFooter">Kontakt</div>
         </div>
         <div class="phonesFooter">
-          <div class="countryFooter">PL </div><div class="numberFooter"> +48 {{ data.phone  }}</div>
+          <div class="countryFooter">PL </div><div class="numberFooter"> +48 {{ dataFooter.phone  }}</div>
         </div>
         <div class="phonesFooter">
-          <div class="countryFooter">Email </div><div class="numberFooter"> <a class="numberFooter" href="mailto:biuro@wwenergia.pl">{{ data.email  }}</a></div>
+          <div class="countryFooter">Email </div><div class="numberFooter"> <a class="numberFooter" href="mailto:biuro@wwenergia.pl">{{ dataFooter.email  }}</a></div>
         </div>
       </div>
     </div>
@@ -67,13 +67,13 @@
           Nasza lokalizacja
           </div>
           <div class="hoursFooter">
-            {{ data.location  }}
+            {{ dataFooter.location  }}
           </div>
           <div class="dayDateFooter">
             Numer identyfikacji (NIP)
           </div>
           <div class="hoursFooter">
-              {{ data.nip  }}
+              {{ dataFooter.nip  }}
           </div>
           <div class="dayDateFooter">
 
